# themester.zsh

./: Cargo.toml  README.md
src/: 2  main.rs
