[package]
name = "themester"
version = "0.2.1"
edition = "2024"
license = "Unlicense"
authors = ["Jack Hamilton jackham800@gmail.com"]
keywords = ["cli", "theme"]
categories = ["command-line-utilities"]
repository = "https://github.com/jackhamilton/themester.zsh"
description = "Links your terminal and nvim themes, and lets you randomize them."

[dependencies]
shellexpand = "3.0"
toml = "0.8.19"
rand = "0.9.0"
toml-configurator = "0.2.0"
freezable-trait = "~0"
chrono = { version = "0.4.42", features = ["serde"] }
rustc-serialize = "0.3.25"
